# gitEssay

./: PLAN.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: ai.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: ai.py  checkpoints.py  conversations.py  projects.py
frontend/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Editor.tsx  index.css  index.tsx
frontend/src/chat/: ChatSidebar.tsx  chat.css  conversations.ts  panelStore.ts  patch.ts  providers.ts  types.ts
frontend/src/checkpoints/: db.ts  service.ts  types.ts  useCheckpoints.ts
frontend/src/diff/: DiffView.tsx  diff.css  diff.ts  tokenize.ts  types.ts
frontend/src/nodes/: CitationComponent.tsx  CitationNode.tsx  ImageComponent.tsx  ImageNode.tsx  PlaygroundNodes.ts  citation.css
frontend/src/plugins/: CheckpointPlugin.tsx
frontend/src/plugins/ActionsPlugin/: index.tsx
frontend/src/plugins/CitationsExtension/: index.tsx
frontend/src/projects/: ProjectSwitcher.tsx  projectStore.ts  projects.css
frontend/src/rewrite/: AISettingsPanel.tsx  actions.ts  aiSettings.css  aiSettings.ts  llmClient.ts  mockProvider.ts  types.ts
frontend/src/themes/: darkMode.css
frontend/src/ui/: AppActionBar.tsx  CheckpointsList.tsx  CheckpointsPanel.css  CheckpointsPanel.tsx  CheckpointsSidebar.tsx  CompareMode.tsx  OverflowToolbar.tsx  SidePanelResizer.tsx  ThemeToggle.tsx  appBar.css  sidePanelStore.ts  sidebars.css  useScrollTrap.ts
frontend/src/utils/: api.ts
(+5 files in other folders)
