[project]
name = "gitessay-backend"
version = "0.1.0"
description = "gitEssay backend — persistence (projects/checkpoints/conversations) + AI gateway"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2",
    "httpx>=0.27",
]
